ira-color: fix allocno_priority_compare_func for qsort (PR 82395)

PR rtl-optimization/82395
	* ira-color.c (allocno_priority_compare_func): Fix comparison step
	based on non_spilled_static_chain_regno_p.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@253904 138bc75d-0d04-0410-961f-82ee72b054a4